# forge

./: .dockerignore  .gitignore  .mcp.json  2026-04-04-093539-local-command-caveatcaveat-the-messages-below.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPRECATED.md  Dockerfile  HANDOFF.md  KNOWN_ISSUES.md  LICENSE  NOTICE  README.md  SECURITY.md  install.sh  marketplace.json
.cargo/: config.toml
.claude-plugin/: LICENSES.yaml  marketplace.json  plugin.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  (+1 more)
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: client.rs  main.rs  transport.rs
crates/cli/src/commands/: daemon.rs  manas.rs  memory.rs  mod.rs  observe.rs  sync.rs  system.rs  teams.rs  util.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  paths.rs  time.rs
crates/core/src/protocol/: codec.rs  contract_tests.rs  inspect.rs  mod.rs  request.rs  response.rs
crates/core/src/types/: code.rs  entity.rs  manas.rs  memory.rs  mod.rs  project_engine.rs  reality_engine.rs  session.rs  team.rs  tool_call.rs
crates/daemon/: Cargo.toml  build.rs
crates/daemon/proto/: forge.proto
crates/daemon/src/: bootstrap.rs  chunk.rs  chunk_raw.rs  claude_memory.rs  common.rs  config.rs  events.rs  extractor_queue.rs  hud_config.rs  lib.rs  main.rs  migrate.rs  notifications.rs  org.rs  pidlock.rs  proactive.rs  raw.rs  recall.rs  sessions.rs  skills.rs  sync.rs  teams.rs  workspace.rs
crates/daemon/src/adapters/: claude.rs  cline.rs  codex.rs  mod.rs
crates/daemon/src/bench/: common.rs  forge_consolidation.rs  forge_context.rs  forge_coordination.rs  forge_identity.rs  forge_isolation.rs  forge_persist.rs  locomo.rs  longmemeval.rs  mod.rs  scoring.rs  telemetry.rs
crates/daemon/src/db/: diagnostics.rs  effectiveness.rs  manas.rs  metrics.rs  mod.rs  ops.rs  pragma.rs  raw.rs  schema.rs  vec.rs
crates/daemon/src/embed/: minilm.rs  mod.rs
crates/daemon/src/extraction/: backend.rs  claude_api.rs  claude_cli.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  prompt.rs  router.rs
crates/daemon/src/graph/: mod.rs  store.rs
crates/daemon/src/guardrails/: blast_radius.rs  check.rs  mod.rs
crates/daemon/src/lsp/: client.rs  detect.rs  mod.rs  regex_go.rs  regex_python.rs  regex_symbols.rs  symbols.rs
crates/daemon/src/project/: code_engine.rs  mod.rs
crates/daemon/src/reality/: cluster.rs  code_engine.rs  mod.rs
crates/daemon/src/server/: auth.rs  grpc.rs  handler.rs  health.rs  http.rs  inspect.rs  metrics.rs  mod.rs  pty.rs  rate_limit.rs  rbac.rs  socket.rs  static_files.rs  supervisor.rs  tier.rs  tls.rs  writer.rs  ws.rs
crates/daemon/src/vector/: index.rs  mod.rs
crates/daemon/src/workers/: consolidator.rs  diagnostics.rs  disposition.rs  embedder.rs  extractor.rs  indexer.rs  instrumentation.rs  kpi_reaper.rs  mod.rs  perception.rs  reaper.rs  skill_inference.rs  watcher.rs
crates/daemon/tests/: e2e_sp1_dark_loops.rs  feature_bench_smoke.rs  flip_preference_flow.rs  forge_consolidation_harness.rs  forge_context_harness.rs  forge_identity_harness.rs  forge_persist_harness.rs  integration_test.rs  recency_decay_flow.rs  record_tool_use_flow.rs  skill_inference_flow.rs  sync_reaffirmed_at.rs  t10_instrumentation_latency.rs  t21_consolidate_pass_event.rs  test_adapter_stress.rs  test_adapters.rs  test_adversarial.rs  test_e2e_lifecycle.rs  test_extraction.rs  test_guardrails.rs  test_hook_e2e.rs  test_integration_quality.rs  test_lsp_integration.rs  test_manas_adversarial.rs  test_proactive_injection.rs  test_pty_ws.rs  test_raw_layer.rs  test_real_transcript_tool_counter.rs  test_recall_benchmark.rs  test_socket_e2e.rs  test_stale_socket.rs  test_wave3.rs  touch_exemption_batch_recall.rs  touch_exemption_compile_context.rs  touch_exemption_recall.rs
forge-core/: Cargo.toml
forge-core/src/: main.rs  security_tests.rs
forge-core/src/agent/: mod.rs  start.rs
forge-core/src/doctor/: mod.rs
forge-core/src/hook/: mod.rs  post_edit.rs  session_end.rs  session_start.rs
forge-core/src/index/: mod.rs  signatures.rs
forge-core/src/memory/: mod.rs  python.rs  recall.rs  remember.rs
forge-core/src/research/: loop_runner.rs  mod.rs
forge-core/src/review/: mod.rs  report.rs
forge-core/src/scan/: mod.rs
forge-core/src/test_runner/: check.rs  mod.rs  run.rs  screenshot.rs
forge-core/src/verify/: check.rs  detect.rs  lint.rs  mod.rs  unified.rs
forge-graph/: pyproject.toml
forge-graph/src/forge_graph/: __init__.py  app.py  auth.py  axon_proxy.py  cli.py  cli_bridge.py  db.py  kuzu_compat.py  meta.py  server.py
forge-graph/src/forge_graph/code/: __init__.py  ingest.py
forge-graph/src/forge_graph/evolution/: engine.py  metrics.py  safety.py  worktree.py
forge-graph/src/forge_graph/hooks/: __init__.py  post_edit.py  session_end.py  session_start.py
forge-graph/src/forge_graph/hud/: state.py
forge-graph/src/forge_graph/memory/: migrate.py  ops.py  schema.py  temporal.py  tools.py  trust.py
forge-graph/src/forge_graph/security/: rules.py  scanner.py  tools.py
forge-graph/tests/: conftest.py  test_adversarial.py  test_agent_tool_refs.py  test_auth.py  test_axon_sandbox.py  test_cli_bridge.py  test_code_ingest.py  test_evolution.py  test_hooks_post_edit.py  test_hooks_session_end.py  test_hooks_session_start.py  test_hud_state.py  test_integration.py  test_scanner.py  test_schema.py  test_temporal.py  test_tools_deterministic.py  test_tools_link.py  test_tools_recall.py  test_tools_remember.py
legacy/forge-core/: Cargo.toml
legacy/forge-core/src/: hud_state.rs  main.rs
legacy/forge-core/src/agent/: stop.rs  track.rs  validate.rs
legacy/forge-core/src/hook/: post_edit.rs  session_end.rs  session_start.rs
legacy/forge-core/src/index/: imports.rs  parser.rs  symbols.rs  walker.rs
legacy/forge-core/src/memory/: remember.rs
legacy/forge-core/src/research/: loop_runner.rs
legacy/forge-core/src/review/: report.rs
legacy/forge-core/src/scan/: mod.rs  rules.rs
legacy/forge-core/src/test_runner/: detect.rs
legacy/forge-core/src/verify/: cross_file.rs  fmt.rs
legacy/forge-core/src/watch/: mod.rs
(+393 files in other folders)
