[project]
name = "forge-graph"
version = "0.2.0"
description = "Unified knowledge graph MCP server for Forge"
requires-python = ">=3.11"
dependencies = [
    "real_ladybug>=0.14,<1.0",
    "fastembed>=0.4,<1.0",
    "mcp>=1.0,<2.0",
]

[project.scripts]
forge-graph = "forge_graph.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
