[package]
name = "forge-cli"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "forge-next"
path = "src/main.rs"

[dependencies]
forge-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "process", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
