[package]
name = "forge-core"
version = "0.5.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = "1"
# Optional CLI integration — enabled via the `clap` feature to derive
# `clap::ValueEnum` on protocol enums so forge-cli can use them directly
# instead of maintaining duplicate mirror enums (Phase 2A-4d.2.1 #7).
clap = { version = "4", features = ["derive"], optional = true }

[features]
bench = []
# Phase 2A-4d.2.1 #7: derive `clap::ValueEnum` on InspectShape and
# InspectGroupBy. forge-cli enables this feature on its forge-core
# dependency; downstream consumers without clap pay nothing.
clap = ["dep:clap"]
