[package]
name = "forge-daemon"
version = "0.4.0"
edition = "2021"

[lib]
name = "forge_daemon"
path = "src/lib.rs"

[[bin]]
name = "forge-daemon"
path = "src/main.rs"

[dependencies]
forge-core = { path = "../core" }
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1.9"
zerocopy = { version = "0.7", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "signal", "fs", "sync", "time", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs2 = "0.4"
libc = "0.2"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
notify = "7"
ulid = "1"

# HTTP transport (opt-in)
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
jsonwebtoken = "9"
base64 = "0.22"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# LSP client
lsp-types = "0.97"

# Import extraction
regex = "1"

[dev-dependencies]
tempfile = "3"
