[package]
name = "forge-daemon"
version = "0.4.0"
edition = "2021"

[lib]
name = "forge_daemon"
path = "src/lib.rs"

[[bin]]
name = "forge-daemon"
path = "src/main.rs"

[dependencies]
forge-core = { path = "../core" }
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1.9"
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"
zerocopy = { version = "0.7", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "signal", "fs", "sync", "time", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs2 = "0.4"
libc = "0.2"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
notify = "7"
ulid = "1"

# HTTP transport (opt-in)
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
jsonwebtoken = "9"
base64 = "0.22"

# gRPC transport (opt-in)
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"

# Prometheus metrics
prometheus = "0.13"

# PTY management
portable-pty = "0.8"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# OpenTelemetry (OTLP trace export — opt-in)
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
tracing-opentelemetry = "0.28"

# LSP client
lsp-types = "0.97"

# Import extraction
regex = "1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
serial_test = "3"
