[package]
name = "forge-daemon"
version = "0.6.0"
edition = "2021"

[lib]
name = "forge_daemon"
path = "src/lib.rs"

[[bin]]
name = "forge-daemon"
path = "src/main.rs"

[[bin]]
name = "forge-bench"
path = "src/bin/forge-bench.rs"
# Imports `bench::forge_identity` + `bench::telemetry` (both gated on
# feature = "bench"). Skip this binary on default builds so
# `cargo check --workspace` stays clean without `--features bench`.
required-features = ["bench"]

[dependencies]
forge-core = { path = "../core" }
rusqlite = { version = "0.39", features = ["bundled"] }
sqlite-vec = "0.1.9"
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"
zerocopy = { version = "0.8", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "signal", "fs", "sync", "time", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs2 = "0.4"
libc = "0.2"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
notify = "7"
ulid = "1"
# Scratch directories for the Forge-Persist bench harness (PersistHarness
# lives in src/bench/forge_persist.rs, so tempfile must be a regular dep
# rather than a dev-dep).
tempfile = "3"

# HTTP transport (opt-in)
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
base64 = "0.22"

# TLS (self-signed localhost certs)
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
axum-server = { version = "0.7", features = ["tls-rustls"] }

# gRPC transport (opt-in)
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"

# Prometheus metrics
prometheus = "0.13"

# Human-friendly duration parsing for /inspect window argument (Phase 2A-4d.2).
humantime = "2"

# parking_lot::RwLock for GaugeSnapshot atomic swap — never held across .await,
# tighter than tokio::sync::RwLock, and already in the transitive dep graph.
parking_lot = "0.12"

# PTY management
portable-pty = "0.8"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# OpenTelemetry (OTLP trace export — opt-in)
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32"

# LSP client
lsp-types = "0.97"

# Import extraction
regex = "1"

# Raw layer embedder — fastembed-rs provides pure-Rust ONNX inference for
# all-MiniLM-L6-v2 (384-dim) so raw ingest is LLM-free and reproducible.
# See docs/benchmarks/plan.md §4.3.
#
# Pinned to 5.11.0 because fastembed 5.12.0+ bumps the transitive ort
# crate to 2.0.0-rc.12 which requests ONNX Runtime API v24, but the
# manylinux_2_17 ONNX Runtime 1.23.0 we ship in `.tools/` only provides
# API v23. Symptom: daemon spawn panics with "Failed to initialize ORT
# API" on every fresh start; embedder dies silently and new memories
# never get embeddings. v0.6.1+ should re-evaluate when ONNX Runtime
# 1.24+ ships in `.tools/` (requires updating scripts/setup-dev-env.sh
# + .cargo/config.toml + scripts/with-ort.sh).
fastembed = "=5.11.0"

# Deterministic reproducible PRNG for benchmark workload generation.
# ChaCha20 gives us platform-independent byte-identical sequences from
# a u64 seed — required for Forge-Persist's workload reproducibility
# contract. See docs/benchmarks/forge-persist-design.md §5.1.
#
# rand 0.10 / rand_chacha 0.10: rand_chacha 0.10 explicitly required as a
# direct dep because rand 0.10 internally swapped to the chacha20 crate but
# we use rand_chacha::ChaCha20Rng directly across bench harnesses (deterministic
# output preserved between rand_chacha 0.9 and 0.10 per upstream changelog).
# `rand::Rng` was renamed to `rand::RngExt` in 0.10 (rand_core's RngCore was
# renamed to Rng); bench files use `use rand::RngExt;` accordingly.
rand = "0.10"
rand_chacha = "0.10"
thiserror = "1"

# SHA-256 for Forge-Persist's canonical content hashing — cycle (g).
# See docs/benchmarks/forge-persist-design.md §6.2 for the exact
# canonical-payload definition per op variant. Pinned to 0.10 for
# long-term API stability.
sha2 = "0.10"

# CLI parsing for the forge-bench binary (not used by forge-daemon itself).
clap = { version = "4", features = ["derive"] }

[features]
bench = ["forge-core/bench"]

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
serial_test = "3"
tokio-tungstenite = "0.26"
futures-util = "0.3"
