[package]
name = "forge-agentic-os"
version = "0.3.0"
edition = "2021"
description = "Agentic OS for Claude Code — agent teams, knowledge graph, security scanning, HUD"
license = "MIT"
repository = "https://github.com/chaosmaximus/forge"
homepage = "https://github.com/chaosmaximus/forge"
readme = "../README.md"
keywords = ["ai", "agent", "claude-code", "llm", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
ignore = "0.4"
clap = { version = "4", features = ["derive", "env"] }
notify = "6"
regex = "1"
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
